🛡️ Sentinel: [CRITICAL] Fix command-line credential exposure in AuditLogManager
Severity: CRITICAL
Vulnerability: `Runtime.getRuntime().exec` was used to execute `mysqldump` with the database password passed directly as a command-line argument (`--password=...`).
Impact: Any local user on the server could view the process list (e.g., using `ps` or `top`) and steal the database password while the backup process was running.
Fix: Refactored the command execution to use `ProcessBuilder` and securely inject the password into the `MYSQL_PWD` environment variable instead of using a command-line argument. Additionally, switched to a List structure to properly separate arguments and avoid injection risks.
Verification: Syntactically verified standard `java.lang.ProcessBuilder` usage and manually verified the code logic to confirm that the password variable is properly mapped to the environment.

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>