@@ -103,16 +103,19 @@ public class AuditLogManager {
 
         String filename = outputDirectory + "/OSCAR_AUDIR_LOG_PURGE_FILE_" + formatter3.format(endDateToPurge) + ".sql";
 
-        String vars[] = new String[9];
-        vars[0] = mysqldump;
-        vars[1] = "--user=" + user;
-        vars[2] = "--password=" + password;
-        vars[3] = "-w";
-        vars[4] = "dateTime < '" + formatter2.format(endDateToPurge) + "'";
-        vars[5] = "-t";
-        vars[6] = "--result-file=" + filename;
-        vars[7] = dbName;
-        vars[8] = "log";
+        java.util.List<String> command = new java.util.ArrayList<>();
+        command.add(mysqldump);
+        command.add("--user=" + user);
+        command.add("-w");
+
+        StringBuilder whereClause = new StringBuilder();
+        whereClause.append("dateTime < '").append(formatter2.format(endDateToPurge)).append("'");
+        command.add(whereClause.toString());
+
+        command.add("-t");
+        command.add("--result-file=" + filename);
+        command.add(dbName);
+        command.add("log");
 
         Integer exitValue = null;
 
@@ -120,7 +123,11 @@ public class AuditLogManager {
         try {
             String s = null;
 
-            Process p = Runtime.getRuntime().exec(vars);
+            ProcessBuilder pb = new ProcessBuilder(command);
+            if (password != null) {
+                pb.environment().put("MYSQL_PWD", password);
+            }
+            Process p = pb.start();
 
             BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
 
